--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.4.4",
     "typestyle": "^2.1.0",
